# python/step1/swagger.yaml
@@ -9,7 +9,8 @@ produces:
 paths:
   /variants:
     get:
-      operationId: main.get_variants
+      x-swagger-router-controller: main
+      operationId: get_variants
       summary: Get all variants within genomic range
       parameters:
         - name: chromosome
@@ -34,7 +35,8 @@ paths:
             items:
               $ref: '#/definitions/Variant'
     post:
-      operationId: main.post_variant
+      x-swagger-router-controller: main
+      operationId: post_variant
       summary: Add a variant to the database
       parameters:
         - name: variant
@@ -44,12 +46,33 @@ paths:
       responses:
         '201':
           description: New variant created
+          headers:
+            Location:
+              type: string
+              format: url
         '405':
           description: Cannot overwrite variant
 
+  /variants/{variant_id}:
+    get:
+      x-swagger-router-controller: main
+      operationId: get_variant
+      summary: Get specific variant
+      parameters:
+        - $ref: '#/parameters/variant_id'
+      responses:
+        "200":
+          description: Return variant
+          schema:
+            $ref: '#/definitions/Variant'
+        "404":
+          description: Variant not found
+
+
   /individuals:
     get:
-      operationId: main.get_individuals
+      x-swagger-router-controller: main
+      operationId: get_individuals
       summary: Get all individuals
       responses:
         '200':
@@ -59,7 +82,8 @@ paths:
             items:
               $ref: '#/definitions/Individual'
     post:
-      operationId: main.post_individual
+      x-swagger-router-controller: main
+      operationId: post_individual
       summary: Add an individual to the database
       parameters:
         - name: individual
@@ -69,13 +93,32 @@ paths:
       responses:
         '201':
           description: New individual created
+          headers:
+            Location:
+              type: string
+              format: url
         '405':
           description: Cannot overwrite individual
 
+  /individuals/{individual_id}:
+    get:
+      x-swagger-router-controller: main
+      operationId: get_individual
+      summary: Get specific individual
+      parameters:
+        - $ref: '#/parameters/individual_id'
+      responses:
+        "200":
+          description: Return individual
+          schema:
+            $ref: '#/definitions/Individual'
+        "404":
+          description: Individual not found
 
   /calls:
     get:
-      operationId: main.get_calls
+      x-swagger-router-controller: main
+      operationId: get_calls
       summary: Get all calls
       responses:
         '200':
@@ -85,7 +128,8 @@ paths:
             items:
               $ref: '#/definitions/Call'
     post:
-      operationId: main.post_call
+      x-swagger-router-controller: main
+      operationId: post_call
       summary: Add a call to the database
       parameters:
         - name: call
@@ -95,9 +139,27 @@ paths:
       responses:
         '201':
           description: New call created
+          headers:
+            Location:
+              type: string
+              format: url
         '405':
-          description: Cannot overwrite call
+          description: Invalid call
 
+  /calls/{call_id}:
+    get:
+      x-swagger-router-controller: main
+      operationId: get_call
+      summary: Get specific call
+      parameters:
+        - $ref: '#/parameters/call_id'
+      responses:
+        "200":
+          description: Return call
+          schema:
+            $ref: '#/definitions/Call'
+        "404":
+          description: Call not found
 
 parameters:
   variant_id:
@@ -106,6 +168,7 @@ parameters:
     in: path
     type: integer
     required: true
+    x-example: 1
 
   individual_id:
     name: individual_id
@@ -113,6 +176,7 @@ parameters:
     in: path
     type: integer
     required: true
+    x-example: 1
 
   call_id:
     name: call_id
@@ -120,6 +184,7 @@ parameters:
     in: path
     type: integer
     required: true
+    x-example: 1
 
 
 definitions:
@@ -131,18 +196,13 @@ definitions:
       id:
         type: integer
         description: Unique identifier
-        example: 123
+        example: 1
       description:
         type: string
         description: description of individual
         example: "Subject 17"
         minLength: 1
         maxLength: 100
-      created:
-        type: string
-        format: date-time
-        description: Creation time
-        example: "2015-07-07T15:49:51.230+02:00"
 
   Call:
     type: object
@@ -154,15 +214,15 @@ definitions:
       id:
         type: integer
         description: Unique identifier
-        example: 123
+        example: 1
       individual_id:
         type: integer
         description: Unique identifier of individual
-        example: 123
+        example: 1
       variant_id:
         type: integer
         description: Unique identifier of variant
-        example: 123
+        example: 1
       genotype:
         type: string
         description: Called genotype
@@ -174,11 +234,6 @@ definitions:
         minLength: 0
         maxLength: 100
         default: ""
-      created:
-        type: string
-        format: date-time
-        description: Creation time
-        example: "2015-07-07T15:49:51.230+02:00"
 
   Variant:
     type: object
@@ -191,7 +246,7 @@ definitions:
       id:
         type: integer
         description: Unique identifier
-        example: 123
+        example: 1
       name:
         type: string
         description: variant name if any
